--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Password Generator</title>
 </head>
 <body>
+  <p id="pwd">La tua password è:</p>
   
   <script src="js/script.js"></script>
 </body>
